# TaskQueue

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: application.py  main.py
src/core/: __init__.py  config.py  database.py  queue.py  task.py
tests/: conftest.py  test_parallelism.py  test_simple_suite.py
