[project]
name = "taskqueue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.115.9",
    "greenlet>=3.1.1",
    "httpx>=0.28.1",
    "logging>=0.4.9.6",
    "pytest>=8.3.5",
    "sqlalchemy>=2.0.38",
    "trio>=0.29.0",
    "uvicorn>=0.34.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
